--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Document management system",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test/**/*js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/andela-jare/CP3-DMS/issues"
   },
-  "homepage": "https://github.com/andela-jare/CP3-DMS#readme"
+  "homepage": "https://github.com/andela-jare/CP3-DMS#readme",
+  "devDependencies": {
+    "expect": "^1.20.2",
+    "mocha": "^3.2.0",
+    "should": "^11.2.0"
+  }
 }
