--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Document management system",
   "main": "server.js",
   "scripts": {
-    "test": "./node_modules/istanbul/lib/cli.js cover mocha test/**/*js"
+    "test": "./node_modules/istanbul/lib/cli.js cover ./node_modules/.bin/_mocha ./test/**/*js"
   },
   "repository": {
     "type": "git",
