--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Document management system",
   "main": "server.js",
   "scripts": {
-    "test": "./node_modules/istanbul/lib/cli.js cover ./node_modules/.bin/_mocha ./test/**/*js"
+    "test": "./node_modules/istanbul/lib/cli.js cover ./node_modules/.bin/_mocha -- -R spec"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,7 @@
     "expect": "^1.20.2",
     "istanbul": "*",
     "mocha": "^3.2.0",
+    "mocha-lcov-reporter": "^1.2.0",
     "should": "^11.2.0"
   }
 }
