--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "should": "^11.2.0"
   },
   "dependencies": {
+    "bcrypt": "^1.0.2",
     "body-parser": "^1.16.0",
     "express": "^4.14.1",
     "morgan": "^1.8.0",
