--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js --exec babel-node",
-    "sequelize:init": "babel-node sequelize init",
-    "test": "./node_modules/istanbul/lib/cli.js cover ./node_modules/.bin/_mocha -- -R spec"
+    "seed": "NODE_ENV=test ./node_modules/.bin/babel-node server/test/helpers/seedHelper.js",
+    "mocha":"mocha --compilers js:babel-core/register server/test",
+    "test": "NODE_ENV=test npm run seed && NODE_ENV=test npm run mocha"
   },
   "repository": {
     "type": "git",
@@ -27,18 +28,23 @@
     "babelify": "^7.3.0",
     "coveralls": "*",
     "expect": "^1.20.2",
+    "faker": "^3.1.0",
+    "fm-log": "^4.4.3",
     "istanbul": "*",
     "mocha": "^3.2.0",
     "mocha-lcov-reporter": "^1.2.0",
-    "should": "^11.2.0"
+    "should": "^11.2.0",
+    "supertest": "^3.0.0"
   },
   "dependencies": {
     "bcrypt": "^1.0.2",
     "body-parser": "^1.16.0",
     "express": "^4.14.1",
+    "jsonwebtoken": "^7.2.1",
     "morgan": "^1.8.0",
     "pg": "^6.1.2",
     "pg-hstore": "^2.3.2",
-    "sequelize": "^3.30.2"
+    "sequelize": "^3.30.2",
+    "sequelize-cli": "^2.5.1"
   }
 }
