--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "start": "nodemon server.js --exec babel-node",
     "seed": "NODE_ENV=test ./node_modules/.bin/babel-node server/test/helpers/seedHelper.js",
-    "mocha":"mocha --compilers js:babel-core/register server/test",
-    "test": "NODE_ENV=test npm run seed && NODE_ENV=test npm run mocha"
+    "mocha": "mocha --compilers js:babel-core/register server/test",
+    "test": "NODE_ENV=test npm run seed && NODE_ENV=test npm run mocha",
+    "cover": "NODE_ENV=test npm run seed && rm -rf coverage/ && NODE_ENV=test babel-node ./node_modules/babel-istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- -R spec server/test"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,7 @@
   "devDependencies": {
     "babel-cli": "^6.22.2",
     "babel-core": "^6.22.1",
+    "babel-istanbul": "^0.12.1",
     "babel-preset-env": "^1.1.8",
     "babel-preset-es2015": "^6.22.0",
     "babel-register": "^6.22.0",
