--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,14 @@ language: node_js
 node_js:
   - 6
 
-after_script: cat ./coverage/lcov.info | ./node_modules/.bin/coveralls
+services:
+  - postgresql
+
+before_script:
+  - psql -c 'create database cp3_travis_test;' -U postgres
+  - NODE_ENV=test npm run migrate
+
+script:
+  - npm test
+
+after_script: npm run coveralls
