--- a/server/config/config.json
+++ b/server/config/config.json
@@ -10,7 +10,7 @@
   "test": {
     "username": "postgres",
     "password": "password",
-    "database": "doc-test",
+    "database": "doc_test",
     "host": "127.0.0.1",
     "port": 5432,
     "dialect": "postgres"
