--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "babel-register": "^6.22.0",
     "babelify": "^7.3.0",
     "coveralls": "*",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
     "expect": "^1.20.2",
     "faker": "^3.1.0",
     "fm-log": "^4.4.3",
