--- a/package.json
+++ b/package.json
@@ -22,16 +22,10 @@
   },
   "homepage": "https://github.com/andela-jare/CP3-DMS#readme",
   "devDependencies": {
-    "babel-cli": "^6.22.2",
-    "babel-core": "^6.22.1",
-    "babel-istanbul": "^0.12.1",
-    "babel-preset-env": "^1.1.8",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-register": "^6.22.0",
-    "babelify": "^7.3.0",
     "coveralls": "*",
-    "eslint-config-airbnb": "^14.1.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint": "^3.15.0",
+    "eslint-config-airbnb-base": "^11.1.0",
+    "eslint-plugin-import": "^2.2.0",
     "expect": "^1.20.2",
     "faker": "^3.1.0",
     "fm-log": "^4.4.3",
@@ -42,6 +36,13 @@
     "supertest": "^3.0.0"
   },
   "dependencies": {
+    "babel-cli": "^6.22.2",
+    "babel-core": "^6.22.1",
+    "babel-istanbul": "^0.12.1",
+    "babel-preset-env": "^1.1.8",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-register": "^6.22.0",
+    "babelify": "^7.3.0",
     "bcrypt": "^1.0.2",
     "body-parser": "^1.16.0",
     "express": "^4.14.1",
