--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "babelify": "^7.3.0",
     "bcrypt": "^1.0.2",
     "body-parser": "^1.16.0",
+    "dotenv": "^4.0.0",
     "express": "^4.14.1",
     "jsonwebtoken": "^7.2.1",
     "morgan": "^1.8.0",
