feature(api-endpoints): use environment variables for database config

--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,18 +1,10 @@
 {
   "development": {
-    "username": "postgres",
-    "password": "password",
-    "database": "docman",
-    "host": "127.0.0.1",
-    "port": 5432,
+    "use_env_variable": "DB_DEV_URL",
     "dialect": "postgres"
   },
   "test": {
-    "username": "postgres",
-    "password": "password",
-    "database": "doc_test",
-    "host": "127.0.0.1",
-    "port": 5432,
+    "use_env_variable": "DB_TEST_URL",
     "dialect": "postgres"
   },
   "production": {
