--- a/.eslintrc
+++ b/.eslintrc
@@ -36,6 +36,7 @@
     "consistent-return": 0,
     "no-param-reassign": 0,
     "no-restricted-syntax": ["error", "WithStatement"],
+    "no-underscore-dangle": 0,
     "comma-dangle": 0,
     "curly": [1, "multi-line"],
     "no-multi-spaces": [2, {"exceptions": {"ImportDeclaration": true}}],
