--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "homepage": "https://github.com/andela-jare/CP3-DMS#readme",
   "devDependencies": {
+    "Faker": "^0.7.2",
     "coveralls": "*",
     "eslint": "^3.15.0",
     "eslint-config-airbnb-base": "^11.1.0",
