--- a/server/config/config.json
+++ b/server/config/config.json
@@ -5,7 +5,8 @@
   },
   "test": {
     "use_env_variable": "DB_TEST_URL",
-    "dialect": "postgres"
+    "dialect": "postgres",
+    "logging": false
   },
   "production": {
     "use_env_variable": "DATABASE_URL"
