feature(seeder): add admin user through seeder Finishes #139453891

--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,6 +1,10 @@
 {
   "development": {
-    "use_env_variable": "DB_DEV_URL",
+    "username": "postgres",
+    "password": "password",
+    "database": "docman",
+    "host": "127.0.0.1",
+    "port": 5432,
     "dialect": "postgres"
   },
   "test": {
