feature(config-file): use env variables Finishes #139453891

--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,10 +1,6 @@
 {
   "development": {
-    "username": "postgres",
-    "password": "password",
-    "database": "docman",
-    "host": "127.0.0.1",
-    "port": 5432,
+    "use_env_variable": "DB_DEV_URL",
     "dialect": "postgres"
   },
   "test": {
