--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -6,7 +6,7 @@ engines:
       import/no-unresolved:
         enabled: false
   duplication:
-    enabled: true
+    enabled: false
     config:
       languages:
       - javascript
