--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,10 +1,10 @@
 {
   "development": {
-    "use_env_variable": "DB_DEV_URL",
+    "use_env_variable": "DATABASE_URL",
     "dialect": "postgres"
   },
   "test": {
-    "use_env_variable": "DB_TEST_URL",
+    "use_env_variable": "DATABASE_URL",
     "dialect": "postgres",
     "logging": false
   },
