--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "should": "^11.2.0",
     "should-sinon": "0.0.5",
     "sinon": "^1.17.7",
+    "sinon-chai": "^2.8.0",
     "supertest": "^3.0.0"
   },
   "dependencies": {
